# game

./: .gitignore  CMakeLists.txt  README.md  TODO
include/: Collision.h  Collisions.h  Entity.h  EntityManager.h  Globals.h  SFMLDebugDraw.h  State.h
src/: Collision.cpp  Collisions.cpp  Entity.cpp  EntityManager.cpp  SFMLDebugDraw.cpp  State.cpp  main.cpp
